<resources>
    <string name="app_name">Nazrah </string>
    <string name="home_fragment">Home Fragment</string>
    <string name="default_notification_channel_id">nazrahapp</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="create_pwd">Create account password</string>
    <string name="login_button">Login</string>
    <string name="splash_fragment">Splash Fragment</string>
    <string name="app_desc">100% free only at Cizo</string>
    <string name="slide1_title">Welcome to Cizo!</string>
    <string name="slide1_Desc">Thank you for downloading our app! Enjoy all of Cizo features directly in your hands!</string>
    <string name="slide2_title">Trusted by Teachers</string>
    <string name="slide2_Desc">Cizo is trusted by the teachers worldwide to maintain the student learning progress.</string>
    <string name="slide3_title">Get Ready, be a Superstar!</string>
    <string name="slide3_Desc">Gather all the poins as much as you can, be a superstar in your class with Cizo!</string>
    <string name="start_journey">Start the Journey</string>
    <string name="next">Next</string>
    <string name="enter_account_password">Enter account password</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="enter_mail_address">Enter your e-mail address</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="fantastic">Fantastic!</string>
    <string name="confirm">Confirm</string>
    <string name="verify_now">Verify Now</string>
    <string name="successful_reset_pwd">We have sent 4 digits confirmation code to [0], please take a look and verify it.</string>
    <string name="forgotpassword_text">Forgot your password? don’t worry, just take a simple step and create your new password!</string>
    <string name="profile">Profile</string>
    <string name="code">Find Quiz Code</string>
    <string name="code_text">Enter quiz code that given by teacher, and you can start gathering points!</string>
    <string name="find_Quiz">Find Quiz</string>
    <string name="search">Search</string>
    <string name="ok">Ok</string>
    <string name="successTitle">Success</string>
    <string name="registerSuccess">You are registered successfully</string>
</resources>