<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomsheet_size"
        android:scaleX="9.2"
        android:scaleY="1.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <View
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:background="@drawable/background_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/rocket" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/dp30"
        android:layout_height="@dimen/dp30"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_backarrow" />

    <TextView
        android:id="@+id/tvForgetPwd"
        style="@style/label_m_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/forgot_password_title"
        android:textSize="@dimen/dp18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <TextView
        android:id="@+id/tvForgetDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        style="@style/label_m_black"
        android:text="@string/forgotpassword_text"
        app:layout_constraintEnd_toEndOf="@+id/tvForgetPwd"
        app:layout_constraintStart_toStartOf="@+id/ivBack"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPwd" />

    <com.nazrah.nazrahapp.custom_views.CustomDefaultEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_mail_address"
        android:inputType="textEmailAddress"
        app:drawableStart="@drawable/ic_mail"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="@+id/tvForgetPwd"
        app:layout_constraintStart_toStartOf="@+id/ivBack"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetDesc"
        app:layout_constraintVertical_bias="0.36"
        app:title="@string/e_mail_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        style="@style/button_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:cornerRadius="@dimen/dp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>