<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp16"
        tools:context=".RegisterActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:text="wahab"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="phonenumber"
            android:inputType="number"
            android:text="45554554545545"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextName" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/editTextPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />





        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/typesFilterContainer"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/home_view_radius"
            app:boxCornerRadiusBottomStart="@dimen/home_view_radius"
            app:boxCornerRadiusTopEnd="@dimen/home_view_radius"
            app:boxCornerRadiusTopStart="@dimen/home_view_radius"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:endIconDrawable="@drawable/ic_arrow_down"
            app:endIconTint="#000000">

            <AutoCompleteTextView
                android:id="@+id/datesFilterSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:dropDownSelector="@drawable/filter_spinner_dropdown_bg"
                android:ellipsize="end"
                android:inputType="none"
                android:maxLines="1"
                android:textSize="@dimen/default_14sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:hint="Select Profession"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typesFilterContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"/>



        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register"
            android:textColor="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="366dp"
            android:layout_height="56dp"
            android:layout_marginBottom="170dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/do_you_have_an_account"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.6"
                android:onClick="goToLogin"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="@dimen/dp112"
            android:layout_height="@dimen/dp112"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_profile_pic" />

        <TextView
            android:id="@+id/tvAddProfileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="Add Profile Picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePic" />

        <com.nazrah.nazrahapp.custom_views.CustomDefaultEditText
            android:id="@+id/etFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mail_address"
            android:inputType="textPersonName"
            app:drawable="@drawable/ic_person"
            android:layout_marginTop="@dimen/dp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddProfileText" />

        <com.nazrah.nazrahapp.custom_views.CustomDefaultEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mail_address"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dp16"
            app:drawable="@drawable/ic_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFullName" />

        <com.nazrah.nazrahapp.custom_views.CustomDefaultEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mail_address"
            android:layout_marginTop="@dimen/dp16"
            android:inputType="textVisiblePassword"
            app:drawable="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>